[package]
name = "slint-center-window"
version = "0.1.0"
authors = ["prof79"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
i-slint-backend-winit = "*"
winit = "0"

[build-dependencies]
slint-build = "1.3"
