[package]
name = "slint-center-window"
version = "0.2.0"
authors = ["prof79"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
i-slint-backend-winit = "1.5"

[build-dependencies]
slint-build = "1.5"
